--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -11,6 +11,7 @@
   --clr-accent: rgb(222, 52, 0);
   --clr-accent-dark: rgb(163, 38, 0);
   --clr-secondary: rgb(0, 62, 163);
+  --br: 0.5em;
 }
 
 body {
@@ -28,5 +29,78 @@ h2,
 h3,
 p {
   margin: 0;
+}
+
+img {
+  max-width: 100%;
+}
+
+.game {
+  position: relative;
+  width: 12.5em;
+}
+
+.streamers {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.streamers img {
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+}
+
+.rank {
+  position: absolute;
+  top: 0;
+  right: 1em;
+  font-weight: bold;
+  font-size: 1.125rem;
+  background-color: red;
+  padding: 0.5em;
+  -webkit-clip-path: polygon(100% 0%, 100% 100%, 51% 73%, 0 100%, 0 0);
+          clip-path: polygon(100% 0%, 100% 100%, 51% 73%, 0 100%, 0 0);
+}
+
+.front .thumbnail {
+  border-radius: var(--br);
+}
+
+.front .game__name {
+  margin: 0.75em 0;
+}
+
+.front .stats {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid red;
+}
+
+.front .streamers img {
+  border: 1px solid var(--clr-dark);
+}
+
+.front .streamers img:nth-of-type(1) {
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+  z-index: 1;
+}
+
+.front .streamers img:nth-of-type(2) {
+  -webkit-transform: translateX(25%);
+          transform: translateX(25%);
+}
+
+.back {
+  display: none;
 }
 /*# sourceMappingURL=main.css.map */
