--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -10,6 +10,8 @@
   --clr-accent: rgb(222, 52, 0);
   --clr-accent-dark: rgb(163, 38, 0);
   --clr-secondary: rgb(0, 62, 163);
+
+  --br: 0.5em;
 }
 
 body {
@@ -26,4 +28,63 @@ h2,
 h3,
 p {
   margin: 0;
+}
+
+img {
+  max-width: 100%;
+}
+
+.game {
+  position: relative;
+  width: 12.5em;
+}
+
+.streamers {
+  display: flex;
+  img {
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+  }
+}
+
+.rank {
+  position: absolute;
+  top: 0;
+  right: 1em;
+  font-weight: bold;
+  font-size: 1.125rem;
+  background-color: rgb(255, 0, 0);
+  padding: 0.5em;
+  clip-path: polygon(100% 0%, 100% 100%, 51% 73%, 0 100%, 0 0);
+}
+
+.front {
+  .thumbnail {
+    border-radius: var(--br);
+  }
+  .game__name {
+    margin: 0.75em 0;
+  }
+  .stats {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid red;
+  }
+
+  .streamers img {
+    border: 1px solid var(--clr-dark);
+    &:nth-of-type(1) {
+      transform: translateX(50%);
+      z-index: 1;
+    }
+    &:nth-of-type(2) {
+      transform: translateX(25%);
+    }
+  }
+}
+
+.back {
+  display: none;
 }
