--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -11,7 +11,7 @@
   --clr-accent: rgb(222, 52, 0);
   --clr-accent-dark: rgb(163, 38, 0);
   --clr-secondary: rgb(0, 62, 163);
-  --br: 0.5em;
+  --br: 0.1rem;
 }
 
 body {
@@ -37,7 +37,7 @@ img {
 
 .game {
   position: relative;
-  width: 12.5em;
+  width: 13.5em;
 }
 
 .streamers {
@@ -64,6 +64,12 @@ img {
           clip-path: polygon(100% 0%, 100% 100%, 51% 73%, 0 100%, 0 0);
 }
 
+/*front styling */
+.front {
+  -webkit-transition: 250ms;
+  transition: 250ms;
+}
+
 .front .thumbnail {
   border-radius: var(--br);
 }
@@ -82,7 +88,6 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px solid red;
 }
 
 .front .streamers img {
@@ -100,7 +105,40 @@ img {
           transform: translateX(25%);
 }
 
-.back {
+.more-info {
   display: none;
+}
+
+/*background styling with transform and transition */
+.background {
+  background: #234;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  -webkit-transform: scale(0.2);
+          transform: scale(0.2);
+  border-radius: var(--br);
+  opacity: 0;
+}
+
+/*hover into the card and grey background pop outs */
+.game:hover .front {
+  -webkit-transform: translateY(-30%) scale(0.9);
+          transform: translateY(-30%) scale(0.9);
+}
+
+.game:hover .front .stats {
+  opacity: 0;
+}
+
+.game:hover .background {
+  -webkit-transition: transfrom 200ms ease-in-out, opacity 100ms linear;
+  transition: transfrom 200ms ease-in-out, opacity 100ms linear;
+  opacity: 1;
+  -webkit-transform: scale(1.5, 1.2);
+          transform: scale(1.5, 1.2);
 }
 /*# sourceMappingURL=main.css.map */
