--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -12,6 +12,8 @@
   --clr-secondary: rgb(0, 62, 163);
 
   --br: 0.1rem;
+
+  --transition: transform 200ms cubic-bezier(0.21, 1, 0.81, 1);
 }
 
 body {
@@ -52,11 +54,13 @@ img {
   position: absolute;
   top: 0;
   right: 1em;
+  z-index: 1000;
   font-weight: bold;
   font-size: 1.125rem;
   background-color: rgb(255, 0, 0);
   padding: 0.5em;
   clip-path: polygon(100% 0%, 100% 100%, 51% 73%, 0 100%, 0 0);
+  transition: var(--transition);
 }
 
 /*front styling */
@@ -108,8 +112,15 @@ img {
 }
 /*hover into the card and grey background pop outs */
 .game:hover {
+  .rank {
+    transform: translate(200%, -65%);
+  }
   .front {
     transform: translateY(-30%) scale(0.9);
+
+    .game__name {
+      animation: game__name 250ms forwards;
+    }
 
     .stats {
       opacity: 0;
@@ -119,5 +130,30 @@ img {
     transition: transfrom 200ms ease-in-out, opacity 100ms linear;
     opacity: 1;
     transform: scale(1.5, 1.2);
+  }
+}
+
+// i used keyframes instead of using transition and transform because you cant use text-align using them.
+@keyframes game__name {
+  0% {
+    text-align: left;
+    opacity: 1;
+  }
+
+  20% {
+    text-align: left;
+    opacity: 0;
+  }
+
+  50% {
+    text-align: center;
+    opacity: 0;
+    transform: scale(1.2);
+  }
+
+  100% {
+    text-align: center;
+    opacity: 1;
+    transform: scale(1.2);
   }
 }
