--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -6,12 +6,12 @@
 }
 
 :root {
-  --clr-dark: rgb(13, 17, 19);
+  --clr-dark: rgb(0, 0, 0);
   --clr-light: #fff;
   --clr-accent: rgb(222, 52, 0);
   --clr-accent-dark: rgb(163, 38, 0);
-  --clr-secondary: rgb(0, 62, 163);
-  --br: 0.1rem;
+  --clr-secondary: rgb(0, 76, 199);
+  --br: 0.5rem;
   --transition: transform 200ms cubic-bezier(0.21, 1, 0.81, 1);
 }
 
@@ -36,15 +36,27 @@ img {
   max-width: 100%;
 }
 
+.btn {
+  cursor: pointer;
+  border: 0;
+  background: var(--clr-secondary);
+  border-radius: 100vw;
+  color: var(--clr-light);
+  padding: 0.5em 1.5em;
+  font-weight: bold;
+}
+
 .game {
   position: relative;
   width: 13.5em;
+  cursor: pointer;
 }
 
 .streamers {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  text-align: center;
 }
 
 .streamers img {
@@ -110,12 +122,46 @@ img {
 }
 
 .more-info {
-  display: none;
+  position: absolute;
+  top: 52%;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1.5em;
+  -webkit-transform: translateY(35%);
+          transform: translateY(35%);
+}
+
+.more-info .streaming-info {
+  -webkit-columns: 2;
+          columns: 2;
+  -webkit-column-rule: 1px solid rgba(255, 255, 255, 0.25);
+          column-rule: 1px solid rgba(255, 255, 255, 0.25);
+}
+
+.more-info .game-stat {
+  font-size: 1.125rem;
+  text-align: center;
+}
+
+.more-info .game-stat span {
+  font-size: 0.85rem;
+  display: block;
 }
 
 /*background styling with transform and transition */
 .background {
-  background: #234;
+  background: #282e36;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -130,8 +176,8 @@ img {
 
 /*hover into the card and grey background pop outs */
 .game:hover .rank {
-  -webkit-transform: translate(200%, -65%);
-          transform: translate(200%, -65%);
+  -webkit-transform: translate(180%, -60%);
+          transform: translate(180%, -60%);
 }
 
 .game:hover .front {
@@ -148,12 +194,36 @@ img {
   opacity: 0;
 }
 
-.game:hover .background {
-  -webkit-transition: transfrom 200ms ease-in-out, opacity 100ms linear;
-  transition: transfrom 200ms ease-in-out, opacity 100ms linear;
+.game:hover .more-info {
   opacity: 1;
-  -webkit-transform: scale(1.5, 1.2);
-          transform: scale(1.5, 1.2);
+  -webkit-transition: transfrom 250ms ease, opacity 150ms linear;
+  transition: transfrom 250ms ease, opacity 150ms linear;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.game:hover .more-info .streamers {
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.game:hover .more-info .streamer {
+  font-size: 0.9rem;
+}
+
+.game:hover .more-info .streamer .name {
+  font-weight: bold;
+}
+
+.game:hover .background {
+  -webkit-transition: var(--transition), opacity 100ms linear;
+  transition: var(--transition), opacity 100ms linear;
+  opacity: 1;
+  -webkit-transform: scale(1.45, 1.3) translateY(4.5%);
+          transform: scale(1.45, 1.3) translateY(4.5%);
+  border-radius: 5%;
 }
 
 @-webkit-keyframes game__name {
