--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -5,13 +5,13 @@
 }
 
 :root {
-  --clr-dark: rgb(13, 17, 19);
+  --clr-dark: rgb(0, 0, 0);
   --clr-light: #fff;
   --clr-accent: rgb(222, 52, 0);
   --clr-accent-dark: rgb(163, 38, 0);
-  --clr-secondary: rgb(0, 62, 163);
+  --clr-secondary: rgb(0, 76, 199);
 
-  --br: 0.1rem;
+  --br: 0.5rem;
 
   --transition: transform 200ms cubic-bezier(0.21, 1, 0.81, 1);
 }
@@ -36,13 +36,25 @@ img {
   max-width: 100%;
 }
 
+.btn {
+  cursor: pointer;
+  border: 0;
+  background: var(--clr-secondary);
+  border-radius: 100vw;
+  color: var(--clr-light);
+  padding: 0.5em 1.5em;
+  font-weight: bold;
+}
+
 .game {
   position: relative;
   width: 13.5em;
+  cursor: pointer;
 }
 
 .streamers {
   display: flex;
+  text-align: center;
   img {
     width: 2em;
     height: 2em;
@@ -93,12 +105,36 @@ img {
 }
 
 .more-info {
-  display: none;
+  position: absolute;
+  top: 52%;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5em;
+  transform: translateY(35%);
+
+  .streaming-info {
+    columns: 2;
+    column-rule: 1px solid rgba(255, 255, 255, 0.25);
+  }
+
+  .game-stat {
+    font-size: 1.125rem;
+    text-align: center;
+
+    span {
+      font-size: 0.85rem;
+      display: block;
+    }
+  }
 }
 
 /*background styling with transform and transition */
 .background {
-  background: #234;
+  background: rgb(40, 46, 54);
   position: absolute;
   top: 0;
   bottom: 0;
@@ -113,7 +149,7 @@ img {
 /*hover into the card and grey background pop outs */
 .game:hover {
   .rank {
-    transform: translate(200%, -65%);
+    transform: translate(180%, -60%);
   }
   .front {
     transform: translateY(-30%) scale(0.9);
@@ -126,10 +162,30 @@ img {
       opacity: 0;
     }
   }
-  .background {
-    transition: transfrom 200ms ease-in-out, opacity 100ms linear;
+
+  .more-info {
     opacity: 1;
-    transform: scale(1.5, 1.2);
+    transition: transfrom 250ms ease, opacity 150ms linear;
+
+    transform: translateY(0);
+
+    .streamers {
+      width: 100%;
+      justify-content: space-between;
+    }
+    .streamer {
+      font-size: 0.9rem;
+
+      .name {
+        font-weight: bold;
+      }
+    }
+  }
+  .background {
+    transition: var(--transition), opacity 100ms linear;
+    opacity: 1;
+    transform: scale(1.45, 1.3) translateY(4.5%);
+    border-radius: 5%;
   }
 }
 
