--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -92,6 +92,18 @@ img {
     align-items: center;
   }
 
+  //psuedo-element setup font-awesome icon
+  .viewers::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 400;
+    content: "\f007";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+  }
+
   .streamers img {
     border: 1px solid var(--clr-dark);
     &:nth-of-type(1) {
