--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -46,6 +46,16 @@ img {
   font-weight: bold;
 }
 
+.icon::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+
 .game {
   position: relative;
   width: 13.5em;
@@ -106,15 +116,20 @@ img {
           align-items: center;
 }
 
+.front .viewers {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .front .viewers::before {
-  font-family: "Font Awesome 5 Free";
-  font-weight: 400;
   content: "\f007";
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
+  color: gold;
+  font-size: 0.75em;
+  margin-right: 0.5em;
 }
 
 .front .streamers img {
